*** empty log message ***

--- a/Memoria/Memoria.tex
+++ b/Memoria/Memoria.tex
@@ -57,6 +57,7 @@
 \section{Implementaci'on}
 
 	\subsection{Tecnolog'ias}
+		\input{tecnologias}		
 
 	\subsection{Dise'no}
 
@@ -70,9 +71,12 @@
 
 	\subsection{Conexi'on PDA-Servidor}
 
+	\subsection{Base de datos}
+
 \pagebreak
 
 \section{Manual de usuario}
+	\input{Manual_usuario}	
 
 \pagebreak
 
@@ -96,6 +100,7 @@
 	\bibitem{sun}http://java.sun.com
 	\bibitem{kxmlrpc}http://kxmlrpc.objectweb.org
 	\bibitem{eclipseme}  http://eclipseme.sourceforce.net
+	\bibitem{wikipedia} http://es.wikipedia.org
 
 \end{thebibliography}
 
