*** empty log message ***

--- a/Memoria/Memoria.tex
+++ b/Memoria/Memoria.tex
@@ -70,8 +70,10 @@
 	\subsection{Algoritmo de Floyd}
 
 	\subsection{Conexi'on PDA-Servidor}
+		\input{conexion}
 
 	\subsection{Base de datos}
+		\input{base_datos}
 
 \pagebreak
 
@@ -87,8 +89,9 @@
 \section{Ap'endices}
 
 	\subsection{J2ME}
+		\input{j2me}
 
-	\subsection{XML-RPC}
+	%\subsection{XML-RPC}
 
 	\subsection{Algoritmo de Floyd}
 
@@ -101,6 +104,7 @@
 	\bibitem{kxmlrpc}http://kxmlrpc.objectweb.org
 	\bibitem{eclipseme}  http://eclipseme.sourceforce.net
 	\bibitem{wikipedia} http://es.wikipedia.org
+	%\bibitem{mysql}http://www.programacion.com/bbdd/tutorial/mysql_basico
 
 \end{thebibliography}
 
