--- a/Memoria/inicio_sesion.tex
+++ b/Memoria/inicio_sesion.tex
@@ -1,39 +1,18 @@
-\emph{\underline{Objetivo:}}\\
-
-Se inicia la sesi\'on con el PDA abri\'endose as\'i la aplicaci\'on. Al iniciar la sesi\'on ser\'a necesario que el usuario introduzca su clave y nombre de usuario, que de ser correctos le dar\'an acceso a los men\'us.	\\
-
-\emph{\underline{Entradas:}}
+\emph{\underline{Objetivo:}}\bigskip \\Se inicia la sesi\'on con el PDA abri\'endose as\'i la aplicaci\'on. Al iniciar la sesi\'on ser\'a necesario que el usuario introduzca su clave y nombre de usuario, que de ser correctos le dar\'an acceso a los men\'us.\bigskip \\ \emph{\underline{Entradas:}}
 \begin{itemize}
 \item Clave de usuario.
 \item Nombre de usuario.
 \end{itemize}
-
-\emph{\underline{Precondiciones:}}\\
-
-No hay precondiciones.\\
-
-\emph{\underline{Salidas:}}\\
-	
-En caso de \'exito (clave y nombre de usuario son correctos): 
+\emph{\underline{Precondiciones:}}\bigskip \\No hay precondiciones.\bigskip \\ \emph{\underline{Salidas:}}\bigskip \\En caso de \'exito (clave y nombre de usuario son correctos): 
 \begin{itemize}
 	\item Se muestra el men\'u de la aplicaci\'on en la pantalla del PDA.
 \end{itemize}
-
 En caso de fallo (clave y nombre de usuario no son correctos): 
 \begin{itemize}
 	\item Se informa al usuario de que los datos introducidos no son correctos.
 	\item Se vuelve a la pantalla de inicio para que el usuario tenga la posibilidad de volver  a intentar iniciar la sesi'on.
 \end{itemize}
-
-\emph{\underline{Postcondici\'on si \'exito (clave y nombre de usuario son correctos):}}\\
-
-Se muestra el men\'u de la aplicaci\'on por la pantalla del PDA.\\
-
-\emph{\underline{Postcondici\'on si fallo (clave y nombre de usuario no son correctos):}}\\
-
-Se informa al usuario de que los datos introducidos no son correctos y se le ofrece la posibilidad de intentar acceder a la aplicaci\'on de nuevo.\\
-
-\emph{\underline{Actores: }}
+\emph{\underline{Postcondici\'on si \'exito (clave y nombre de usuario son correctos):}}\bigskip \\Se muestra el men\'u de la aplicaci\'on por la pantalla del PDA.\bigskip \\ \emph{\underline{Postcondici\'on si fallo (clave y nombre de usuario no son correctos):}}\bigskip \\ Se informa al usuario de que los datos introducidos no son correctos y se le ofrece la posibilidad de intentar acceder a la aplicaci\'on de nuevo.\bigskip \\ \emph{\underline{Actores: }}
 \begin{itemize}
 	\item Usuario con PDA.
 	\item Servidor del hospital.
@@ -47,16 +26,11 @@ Se informa al usuario de que los datos introducidos no son correctos y se le ofr
 	\item Una vez confirmada la clave y el nombre de usuario, en el PDA tenemos disponible el men\'u con todas las posibles operaciones que se pueden realizar con la aplicaci\'on.
 \end{enumerate}
 
-\emph{\underline{Secuencias alternativas:}}\\
+\emph{\underline{Secuencias alternativas:}}\bigskip \\ E1.- Se informa al usuario de que los datos que ha introducido no son correctos y se le da la oportunidad de volver a introducirlos (paso 1). \bigskip \\ Para ilustrar mejor est'a secuencia de acciones, incluimos el diagrama de secuencia de este caso de uso (Figura \ref{fig:inicio_sesion})
 
-E1.- Se informa al usuario de que los datos que ha introducido no son correctos y se le da la oportunidad de volver a introducirlos (paso 1).\\
-\\\\
-
-Para ilustrar mejor est'a secuencia de acciones, incluimos el diagrama de secuencia de este caso de uso:\\
-
-\begin{figure*}[h!]
+\begin{figure}[thb]
 	\begin{center}
-        		\framebox{\includegraphics[width=1.0\textwidth]{dsecuenciainicio.png}}
+		\framebox{\includegraphics[scale=0.4]{dsecuenciainicio.png}}
      	\end{center}
     	\caption{Diagrama de secuencia del inicio de sesi'on}\label{fig:inicio_sesion}
-\end{figure*}
+\end{figure}
