--- a/Memoria/Memoria.tex
+++ b/Memoria/Memoria.tex
@@ -12,7 +12,7 @@
 \pagebreak
 
 \section{Autorizaci'on}
-
+		\input{Autorizacion}
 \pagebreak
 
 \section{Resumen}
@@ -66,6 +66,7 @@
 \section{An'alisis del sistema}
 
 	\subsection{Triangulaci'on}
+		\input{Triangular}
 
 	\subsection{Algoritmo de Floyd}
 
@@ -74,6 +75,10 @@
 
 	\subsection{Base de datos}
 		\input{base_datos}
+
+	\subsection{Servidor}
+		\input{Servidor}
+
 
 \pagebreak
 
@@ -104,6 +109,10 @@
 	\bibitem{kxmlrpc}http://kxmlrpc.objectweb.org
 	\bibitem{eclipseme}  http://eclipseme.sourceforce.net
 	\bibitem{wikipedia} http://es.wikipedia.org
+	\bibitem{tringulacion}http://www.francispisani.net/2004/04/wifi_y_la_local.html
+	\bibitem{estandarWiFi}http://standards.ieee.org/getieee802/802.11.html
+	\bibitem{cups}http://www.cups.org/
+	\bibitem{ubuntu}http://www.ubuntu-es.org/
 	%\bibitem{mysql}http://www.programacion.com/bbdd/tutorial/mysql_basico
 
 \end{thebibliography}
