miercoles en la facul

--- a/Memoria/Autorizacion.tex
+++ b/Memoria/Autorizacion.tex
@@ -1,2 +1,2 @@
-Por la presente, los autores de este proyecto autorizamos a la Universidad Complutense a difundir y utilizar con fines académicos, no comerciales y
-mencionando expresamente a sus autores, tanto la propia memoria, como el código, la documentación y/o el prototipo desarrollado.
+Por la presente, los autores de este proyecto autorizamos a la Universidad Complutense a difundir y utilizar con fines acad'emicos, no comerciales y
+mencionando expresamente a sus autores, tanto la propia memoria, como el c'odigo, la documentaci'on y/o el prototipo desarrollado.
