*** empty log message ***

--- a/Memoria/Manual_usuario.tex
+++ b/Memoria/Manual_usuario.tex
@@ -6,7 +6,7 @@ Cuando un m'edico enciende su PDA para empezar a trabajar, lo primero que se enc
 	\begin{center}
         		\framebox{\includegraphics[scale=0.5]{inicio.png}}
      	\end{center}
-    	\caption{Diagrama de secuencia del inicio de sesi'on}\label{fig:inicio_sesion}
+    	\caption{Pantalla de inicio de sesi'on}\label{fig:inicio_sesion}
 \end{figure*}
 
 En caso de que el m'edico no haya introducido correctamente su nombre de usuario o su clave personal, no podr'a acceder a la aplicaci'on. Se le informar'a de ello y se le dar'a la oportunidad de introducir sus datos de nuevo.
@@ -86,9 +86,14 @@ En caso de que introduzcamos mal el nombre del paciente o no est'en disponibles 
     	\caption{Pantalla de error en la consulta de expediente}\label{fig:error_consulta}
 \end{figure*}
 
-En caso de que los datos sean correctos se mostrar'a por pantalla el expediente del paciente solicitado.
+En caso de que los datos sean correctos se mostrar'a por pantalla el expediente del paciente solicitado, como se muestra en la figura \ref{fig:expediente}
 
-%falta pantallazo de esto!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+\begin{figure*}[h!]
+	\begin{center}
+        		\framebox{\includegraphics[scale=0.7]{expediente.png}}
+     	\end{center}
+    	\caption{}\label{fig:expediente}
+\end{figure*}
 
 \item Salir:\newline
 Esta opci'on nos permite salir de la aplicaci'on y apagar el PDA.
